# claude-bedrock-cursor

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  RELEASE_SUMMARY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml  security.yml
docs/: architecture.md  aws-bedrock-setup.md  cost-optimization.md  cursor-integration.md  oauth-authentication.md  security-best-practices.md  setup-guide.md  troubleshooting.md
scripts/: security_scan.sh
src/claude_bedrock_cursor/: __init__.py  __main__.py  cli.py  config.py
src/claude_bedrock_cursor/auth/: __init__.py  oauth.py  storage.py
src/claude_bedrock_cursor/aws/: __init__.py  iam.py
src/claude_bedrock_cursor/bedrock/: __init__.py  client.py
src/claude_bedrock_cursor/cursor/: __init__.py
src/claude_bedrock_cursor/utils/: __init__.py  errors.py
tests/: conftest.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_bedrock_integration.py  test_oauth_flow.py
tests/unit/: test_bedrock.py  test_cli.py  test_config.py  test_oauth.py  test_storage.py
