[project]
name = "claude-bedrock-cursor"
version = "1.0.0"
description = "Production-ready Claude Code integration with AWS Bedrock and Cursor IDE"
authors = [{name = "Claude Code Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["claude", "aws", "bedrock", "cursor", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",           # Modern CLI framework
    "boto3>=1.35.0",            # AWS SDK
    "pydantic>=2.9.0",          # Config validation
    "pydantic-settings>=2.5.0", # Settings management
    "python-dotenv>=1.0.0",     # .env support
    "rich>=13.9.0",             # Beautiful CLI output
    "httpx>=0.27.0",            # OAuth requests
    "keyring>=25.5.0",          # Secure credential storage
    "tomli>=2.0.0; python_version < '3.11'",  # TOML support (backport)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",              # Linting & formatting
    "mypy>=1.13.0",             # Type checking
    "pytest>=8.3.0",            # Testing framework
    "pytest-asyncio>=0.24.0",   # Async testing
    "pytest-cov>=6.0.0",        # Coverage reporting
    "pytest-mock>=3.14.0",      # Mocking utilities
    "moto>=5.1.17",             # AWS mocking
    "responses>=0.25.0",        # HTTP mocking
    "faker>=33.0.0",            # Test data
    "pre-commit>=4.0.0",        # Git hooks
    "pip-audit>=2.7.0",         # Security scanning
    "bandit>=1.7.0",            # SAST
    "boto3-stubs[bedrock]>=1.35.0",  # Type hints for boto3
]

[project.scripts]
claude-bedrock = "claude_bedrock_cursor.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/claude-bedrock-cursor"
Documentation = "https://github.com/your-org/claude-bedrock-cursor/docs"
Repository = "https://github.com/your-org/claude-bedrock-cursor"
Issues = "https://github.com/your-org/claude-bedrock-cursor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["moto.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/claude_bedrock_cursor",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in tests

[tool.hatch.build.targets.wheel]
packages = ["src/claude_bedrock_cursor"]
